# cpp_playground

./: .gitignore  README.md
geeks_for_geeks/basics/: README.md
geeks_for_geeks/basics/02_hello_world/: CMakeLists.txt  README.md  hello-world.cpp
geeks_for_geeks/basics/04_data_types/: README.md  data_types.cpp
geeks_for_geeks/basics/05_io/: README.md  io.cpp
geeks_for_geeks/basics/07_preprocessors/: macro_functions.cpp  macros.cpp  pragmas.cpp
geeks_for_geeks/basics/08_operators/: operators.cpp
geeks_for_geeks/basics/13_switch/: switches.cpp
geeks_for_geeks/basics/15_arrays/: CMakeLists.txt  README.md  arrays.cpp
geeks_for_geeks/basics/17_pointers_and_references/: CMakeLists.txt  README.md  pnr.cpp
geeks_for_geeks/basics/hello_world/: hello-world.cpp
geeks_for_geeks/basics/objects/: CMakeLists.txt  oop.cpp  people.cpp
skeleton_code/cpp_cross_platform_skeleton/: CMakeLists.txt  README.md  cpp_cross_platform_skeleton.h
skeleton_code/cpp_cross_platform_skeleton/src/: cpp_cross_platform_skeleton.cpp
skeleton_code/cpp_structure/: CMakeLists.txt  README.md
skeleton_code/cpp_structure/src/: Lib.h  main.cpp
skeleton_code/cpp_structure/test/: CMakeLists.txt  LibTests.cpp
skeleton_code/cpp_with_gtest/: CMakeLists.txt  Example.cpp  Example.h  README.md  main.cpp
skeleton_code/cpp_with_gtest/test/: CMakeLists.txt  ExampleTests.cpp
