# CMakeList.txt : CMake project for cpp_cross_platform_skeleton, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project (cpp_cross_platform_skeleton)

# Add source to this project's executable.
add_executable (cpp_cross_platform_skeleton "src/cpp_cross_platform_skeleton.cpp" "src/cpp_cross_platform_skeleton.h")

# TODO: Add tests and install targets if needed.
