# set(TEST_NAME LibTests)

# set(LIB_FILES
#     ../src/Lib.cpp
# )
# set(HEADER_FILES
#     ../src/Lib.h
# )
# set(TEST_FILES
#     LibTests.cpp
# )

# # include(${LIBRARY_NAME})
# add_executable(${TEST_NAME} ${TEST_FILES} ${HEADER_FILES} ${LIB_FILES})
# target_link_libraries(${TEST_NAME} PUBLIC
#     gtest_main
# )

# add_test(
#     NAME ${TEST_NAME}
#     COMMAND ${TEST_NAME}
# )